tests/rosetta/out/C/aliquot-sequence-classifications.error
cc: exit status 1
/tmp/aliquot-sequence-classifications.c:65:24: warning: overflow in conversion from ‘long int’ to ‘int’ changes value from ‘140737488355328’ to ‘0’ [-Woverflow]
   65 | static int THRESHOLD = 140737488355328;
      |                        ^~~~~~~~~~~~~~~
/tmp/aliquot-sequence-classifications.c: In function ‘contains’:
/tmp/aliquot-sequence-classifications.c:117:26: error: incompatible type for argument 1 of ‘index_of_string’
  117 |   return index_of_string(xs, value) != 0 - 1;
      |                          ^~
      |                          |
      |                          list_int
/tmp/aliquot-sequence-classifications.c:43:34: note: expected ‘char *’ but argument is of type ‘list_int’
   43 | static int index_of_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/aliquot-sequence-classifications.c:117:30: warning: passing argument 2 of ‘index_of_string’ makes pointer from integer without a cast [-Wint-conversion]
  117 |   return index_of_string(xs, value) != 0 - 1;
      |                              ^~~~~
      |                              |
      |                              int
/tmp/aliquot-sequence-classifications.c:43:43: note: expected ‘char *’ but argument is of type ‘int’
   43 | static int index_of_string(char *s, char *sub) {
      |                                     ~~~~~~^~~
/tmp/aliquot-sequence-classifications.c: In function ‘classifySequence’:
/tmp/aliquot-sequence-classifications.c:187:7: error: expected expression before ‘list_int’
  187 |       list_int tmp6 = slice_list_int(seq, 1, maxOf(1, n - 2));
      |       ^~~~~~~~
/tmp/aliquot-sequence-classifications.c:188:19: error: ‘tmp6’ undeclared (first use in this function); did you mean ‘tmp2’?
  188 |     if ((contains(tmp6, last))) {
      |                   ^~~~
      |                   tmp2
/tmp/aliquot-sequence-classifications.c:188:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/aliquot-sequence-classifications.c:189:33: error: incompatible type for argument 1 of ‘index_of_string’
  189 |       int idx = index_of_string(seq, last);
      |                                 ^~~
      |                                 |
      |                                 list_int
/tmp/aliquot-sequence-classifications.c:43:34: note: expected ‘char *’ but argument is of type ‘list_int’
   43 | static int index_of_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/aliquot-sequence-classifications.c:189:38: warning: passing argument 2 of ‘index_of_string’ makes pointer from integer without a cast [-Wint-conversion]
  189 |       int idx = index_of_string(seq, last);
      |                                      ^~~~
      |                                      |
      |                                      int
/tmp/aliquot-sequence-classifications.c:43:43: note: expected ‘char *’ but argument is of type ‘int’
   43 | static int index_of_string(char *s, char *sub) {
      |                                     ~~~~~~^~~
/tmp/aliquot-sequence-classifications.c:198:14: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  198 |       return (tmp_item_t){.seq = seq, .aliquot = aliquot};
      |              ^
/tmp/aliquot-sequence-classifications.c:201:10: error: incompatible types when returning type ‘tmp_item1_t’ but ‘int’ was expected
  201 |   return (tmp_item1_t){.seq = seq, .aliquot = ""};
      |          ^
/tmp/aliquot-sequence-classifications.c: In function ‘mochi_main’:
/tmp/aliquot-sequence-classifications.c:247:34: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  247 |     printf("%s\n", padLeft(k, 2) + ": " +
      |                    ~~~~~~~~~~~~~ ^
      |                    |             |
      |                    char *        char *
/tmp/aliquot-sequence-classifications.c:248:45: error: request for member ‘data’ in something not a structure or union
  248 |                        padRight((char *)(res.data["aliquot"]), 15) + " " +
      |                                             ^
/tmp/aliquot-sequence-classifications.c:249:53: error: request for member ‘data’ in something not a structure or union
  249 |                        joinWithCommas((list_int)(res.data["seq"])));
      |                                                     ^
/tmp/aliquot-sequence-classifications.c:271:36: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  271 |     printf("%s\n", padLeft(val, 7) + ": " +
      |                    ~~~~~~~~~~~~~~~ ^
      |                    |               |
      |                    char *          char *
/tmp/aliquot-sequence-classifications.c:272:45: error: request for member ‘data’ in something not a structure or union
  272 |                        padRight((char *)(res.data["aliquot"]), 15) + " " +
      |                                             ^
/tmp/aliquot-sequence-classifications.c:273:53: error: request for member ‘data’ in something not a structure or union
  273 |                        joinWithCommas((list_int)(res.data["seq"])));
      |                                                     ^
/tmp/aliquot-sequence-classifications.c:277:13: warning: overflow in conversion from ‘long int’ to ‘int’ changes value from ‘15355717786080’ to ‘1209702880’ [-Woverflow]
  277 |   int big = 15355717786080;
      |             ^~~~~~~~~~~~~~
/tmp/aliquot-sequence-classifications.c:281:45: error: request for member ‘data’ in something not a structure or union
  281 |   printf("%s\n", tmp18 + padRight((char *)(r.data["aliquot"]), 15) + " " +
      |                                             ^
/tmp/aliquot-sequence-classifications.c:282:49: error: request for member ‘data’ in something not a structure or union
  282 |                      joinWithCommas((list_int)(r.data["seq"])));
      |                                                 ^
